# scoringengine

./: .bumpversion.cfg  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  TESTING_SESSION_ISOLATION.md  VERSION_MANAGEMENT.md  Vagrantfile  alembic.ini  claude.md  docker-compose.affinity.yml  docker-compose.yml  engine.conf  engine.conf.inc  pyproject.toml  requirements.txt  run.py  scoring-engine-agents.sh  setup.py  setup_installer.py  test_concurrent_users.py  test_session_isolation.py  test_simple_concurrent.sh  wait-for-bootstrap.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  main.yml  publish-images.yml  snyk-container-analysis.yml  tests.py  tests.yml
alembic/: env.py
alembic/versions/: 001_expand_account_username_and_service_host.py  002_add_template_category.py
ansible/: hosts.inc  site.yml.inc
checks/ipv4/: icmp.py  ssh.py
configs/: engine.service  nginx.conf  rsyslog.conf  web.service  worker.service
docker/: docker-compose.yml  engine.conf.inc  wait-for-bootstrap.sh  wait-for-container.sh  wait-for-port.sh
docker/base/: Dockerfile
docker/bootstrap/: Dockerfile
docker/engine/: Dockerfile
docker/flask/: Dockerfile
docker/nginx/: Dockerfile
docker/redis/: Dockerfile
docker/testbed/: docker-compose.yml
docker/tester/: Dockerfile
docker/web/: Dockerfile
docker/worker/: Dockerfile  Dockerfile.heavy  Dockerfile.standard  sudoers
docker/worker-playwright/: Dockerfile
docs/: Makefile  README.md  WEBSOCKET_IMPLEMENTATION_ANALYSIS.md  WEBSOCKET_SECURITY_MODEL.md  WEBSOCKET_TESTING.md  requirements.txt
docs/Installation/: Engine.md  README.md  SetupEnvironment.md  Web.md  Worker.md
docs/source/: api.rst  bta.rst  checks.rst  conf.py  configuration.rst  create_new_check.rst  development.rst  index.rst  installation.rst  overview.rst  screenshots.rst  sla.rst
migrations/: 001_add_file_storage_columns.py  001_add_file_storage_columns.sql  README.md
scoring_engine/: cache.py  cache_helper.py  celery_app.py  celery_stats.py  competition.py  config.py  config_loader.py  database.py  db.py  db_not_connected.py  engine.py  events.py  file_storage.py  finished_queue.py  job.py  job_queue.py  logger.py  malformed_job.py  notifications.py  sla.py  sse_server.py  username_password_check.py  version.py  webhooks.py  worker.py  worker_queue.py
scoring_engine/checks/: agent.py  dns.py  docker.py  elasticsearch.py  ftp.py  ftp_ownership.py  http.py  http_ownership.py  https.py  icmp.py  imap.py  imaps.py  ldap.py  mongodb.py  mongodb_ownership.py  mssql.py  mysql.py  nfs.py  openvpn.py  pop3.py  pop3s.py  postgresql.py  rdp.py  smb.py  smtp.py  smtps.py  ssh.py  ssh_ownership.py  tcp.py  telnet.py  telnet_ownership.py  vnc.py  webapp_nginxdefaultpage.py  webapp_scoringengine.py  winrm.py  wmi.py  wordpress.py
scoring_engine/engine/: basic_check.py  config.py  db.py  engine.py  execute_command.py  finished_queue.py  http_post_check.py  job.py  job_queue.py  malformed_job.py  username_password_check.py  util.py  worker.py  worker_queue.py
scoring_engine/models/: __init__.py  account.py  agent.py  announcement.py  base.py  check.py  environment.py  flag.py  inject.py  kb.py  machines.py  notifications.py  ownership_record.py  property.py  pwnboard.py  round.py  score.py  server.py  service.py  setting.py  team.py  user.py  welcome.py
scoring_engine/models.bak/: property.py  user.py
scoring_engine/web/: __init__.py  cache.py  settings.cfg
scripts/: setup-roadmap-project.sh
tests/: conftest.py  docker-compose.yml  installer_test.sh  mock_config.py  requirements-webui.txt  requirements.txt  test_config.py  test_config_loader_env.py  test_engine.py  test_setup_installer.py
tests/checks/: test_dns.py  test_ftpdownload.py  test_ftpupload.py  test_icmp.py  test_ssh.py
tests/integration/: conftest.py  db_setup.py  docker-compose.yml  engine.conf.inc  run.sh  test_integrations.py  test_webui.py  test_webui_playwright.py  update_settings.py
tests/load/: README.md  locustfile.py
tests/scoring_engine/: conftest.py  engine.conf.inc  example.conf  factories.py  helpers.py  test___init__.py  test_basic_check.py  test_cache.py  test_cache_helper.py  test_celery_stats.py  test_check_output_artifacts.py  test_competition.py  test_config.py  test_config_loader.py  test_db.py  test_db_not_connected.py  test_engine.py  test_events.py  test_file_storage.py  test_finished_queue.py  test_job.py  test_job_queue.py  test_malformed_job.py  test_sla.py  test_username_password_check.py  test_version.py  test_webhooks.py  test_worker.py  test_worker_queue.py  unit_test.py
web/: __init__.py  app.py  settings.cfg
web/models/: user.py
web/templates/: base.html  base.html.bak  index.html  login.html  overview.html  scoreboard.html  (+2 more)
(+371 files in other folders)
