[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoring_engine"
version = "1.0.0"
description = "Scoring Engine for Red/White/Blue Team Competitions"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Brandon Myers", email = "pwnbus@mozilla.com"},
  {name = "Rusty Bower", email = "rusty@rustybower.com"},
  {name = "Zack Allen", email = "zallen@fastly.com"},
]

dependencies = [
  "bcrypt==4.3.0",
  "celery[redis]==5.5.3",
  "configparser==7.1.0",
  "cryptography==44.0.1",
  "Flask==3.1.2",
  "Flask-Caching==2.3.1",
  "Flask-Login==0.6.3",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-WTF==1.2.2",
  "mysqlclient==2.2.7",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "PyYAML==6.0.2",
  "ranking==0.3.2",
  "Werkzeug==3.1.3",
  "uWSGI==2.0.30",
]

[project.urls]
Homepage = "https://github.com/scoringengine/scoringengine"
Download = "https://github.com/scoringengine/scoringengine/archive/master.zip"

[tool.setuptools.packages.find]
include = ["scoring_engine*" ]
